; ModuleID = '/home/carl/AnghaBench/linux/net/sched/extr_cls_api.c_tcf_proto_check_delete.c'
source_filename = "/home/carl/AnghaBench/linux/net/sched/extr_cls_api.c_tcf_proto_check_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcf_proto = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tcf_proto*, i32)* @tcf_proto_check_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tcf_proto_check_delete(%struct.tcf_proto* %0, i32 %1) #0 {
  %3 = alloca %struct.tcf_proto*, align 8
  %4 = alloca i32, align 4
  store %struct.tcf_proto* %0, %struct.tcf_proto** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.tcf_proto*, %struct.tcf_proto** %3, align 8
  %6 = getelementptr inbounds %struct.tcf_proto, %struct.tcf_proto* %5, i32 0, i32 1
  %7 = call i32 @spin_lock(i32* %6)
  %8 = load %struct.tcf_proto*, %struct.tcf_proto** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i64 @tcf_proto_is_empty(%struct.tcf_proto* %8, i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load %struct.tcf_proto*, %struct.tcf_proto** %3, align 8
  %14 = getelementptr inbounds %struct.tcf_proto, %struct.tcf_proto* %13, i32 0, i32 0
  store i32 1, i32* %14, align 4
  br label %15

15:                                               ; preds = %12, %2
  %16 = load %struct.tcf_proto*, %struct.tcf_proto** %3, align 8
  %17 = getelementptr inbounds %struct.tcf_proto, %struct.tcf_proto* %16, i32 0, i32 1
  %18 = call i32 @spin_unlock(i32* %17)
  %19 = load %struct.tcf_proto*, %struct.tcf_proto** %3, align 8
  %20 = getelementptr inbounds %struct.tcf_proto, %struct.tcf_proto* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  ret i32 %21
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i64 @tcf_proto_is_empty(%struct.tcf_proto*, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
